# qnavierstokes_main

./: CMakeSettings.json
src/app/: CMakeLists.txt  main_window.cpp  main_window.hpp
src/help/: CMakeLists.txt
src/opengl_painter/: opengl_painter.cpp  opengl_painter.hpp
